# jibonJuddho

./: .gitignore  dockerfile  package-lock.json  package.json
.github/workflows/: docker-pub.yml
backend/: db.sqlite3  dockerfile  pyproject.toml
backend/api/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_job_description_job_email_alter_job_openings_and_more.py  0003_alter_job_company_delete_company.py  0004_remove_job_description_remove_job_email_and_more.py  0005_job_description_job_email_alter_job_openings_and_more.py  0006_remove_job_user.py  0007_job_status_alter_job_jobtype_alter_job_qualification.py  0008_job_phone_alter_job_jobtype.py  0009_job_salary3.py  0010_remove_job_salary3.py
backend/backend/: settings.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: .env  components.json  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/.husky/: pre-commit
frontend/app/: Providers.tsx  globals.css  layout.tsx  navBar.tsx  page.tsx
frontend/app/company/: page.tsx
frontend/app/components/: footer.tsx  navBar.tsx  test.tsx  userAvatar.tsx
frontend/app/explore/: jobDetail.tsx  page.tsx
frontend/app/landing/: page.tsx
frontend/app/models/: company.ts  job.ts
frontend/app/pages/: sign-in.tsx
frontend/app/services/: cookieService.ts
frontend/app/signIn/: page.tsx  register.tsx  sign-in.tsx
frontend/app/user/: editProfile.tsx  (+1 more)
frontend/context/: AuthContext.js  AuthContext.jsx  AuthContext.tsx
frontend/lib/: motion.js
(+46 files in other folders)
